# Hify

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: agents_20260622_add_knowledge_bindings.py  agents_20260622_add_workflow_binding.py  agents_20260622_create_agent_tables.py  conversations_20260622_create_conversation_tables.py  identity_20260622_create_identity_tables.py  identity_20260624_add_auth_tables.py  jobs_20260622_create_job_tables.py  knowledge_20260622_create_rag_tables.py  mcp_20260622_create_mcp_tables.py  providers_20260622_create_provider_tables.py  providers_20260623_add_model_pricing.py  providers_20260624_add_deepseek_provider_type.py  runs_20260622_create_run_tables.py  runs_20260623_add_diagnostics_duration.py  runs_20260625_add_activity_source_events.py  shared_20260622_create_platform_messaging.py  tools_20260622_add_mcp_bindings.py  tools_20260622_create_tool_tables.py  usage_20260622_create_usage_tables.py  usage_20260623_create_usage_quota_tables.py  workflows_20260622_create_workflow_tables.py
backend/scripts/: check_architecture.py  export_openapi.py
backend/src/hify/bootstrap/: api.py  api_schemas.py  celery.py  container.py  settings.py
backend/src/hify/modules/agents/: wiring.py
backend/src/hify/modules/conversations/: wiring.py
backend/tests/architecture/: test_check_architecture.py
backend/tests/unit/bootstrap/: test_celery.py  test_health.py  test_openapi_export.py
(+499 files in other folders)
