[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hify"
version = "0.1.0"
description = "Hify modular monolith backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16,<2",
    "anthropic>=0.75,<1",
    "boto3>=1.40,<2",
    "celery[redis]>=5.5,<6",
    "cryptography>=45,<47",
    "fastapi[standard]>=0.128,<1",
    "google-genai>=1.50,<2",
    "httpx>=0.28,<1",
    "langchain-core>=1.2,<2",
    "langgraph>=1.0,<2",
    "ollama>=0.6,<1",
    "openai>=2.8,<3",
    "pgvector>=0.4,<1",
    "psycopg[binary]>=3.3,<4",
    "pydantic-settings>=2.12,<3",
    "redis>=6.4,<6.5",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uuid6>=2025.0,<2026",
]

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.14,<1",
    "testcontainers[postgres,redis]>=4.13,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["hify"]
mypy_path = "src"
